--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     </header>
     <div class="container">
 
-    
+
 
       <div ng-view=""></div>
 
@@ -61,6 +61,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -69,6 +71,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/registration.js"></script>
+        <script src="scripts/controllers/meetings.js"></script>
         <!-- endbuild -->
 </body>
 </html>
