--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,10 @@
     <div class="container">
 
 
-
+      <div ng-controller="StatusCtrl">
+        <span>{{ userEmail }}</span>
+        <a ng-click="logout()">Logout</a>
+      </div>
       <div ng-view=""></div>
 
 
@@ -68,8 +71,10 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/authentication.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/status.js"></script>
         <script src="scripts/controllers/registration.js"></script>
         <script src="scripts/controllers/meetings.js"></script>
         <!-- endbuild -->
