--- a/app/_testing.html
+++ b/app/_testing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JavaScript: Functions</title>
-  <script src="scripts/_testingClass.js"></script>
+  <script src="scripts/_testingModule.js"></script>
 </head>
 <body>
 
