--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
       <div ng-controller="StatusCtrl">
         <span>{{ userEmail }}</span>
-        <a ng-click="logout()">Logout</a>
+        <a href ng-click="logout()">Logout</a>
       </div>
       <div ng-view=""></div>
 
