--- a/app/index.html
+++ b/app/index.html
@@ -22,18 +22,17 @@
     <!-- Add your site or application content here -->
     <header>
       <nav class="cf" ng-include="'views/nav.html'"></nav>
-      <div class="userdock" ng-include="'views/user-status.html'">
-        
-      </div>
+      <div class="userdock" ng-include="'views/user-status.html'"></div>
     </header>
 
-    <div class="container">
-      <div ng-view=""></div>
-    </div>
-
+    <main>
+      <div class="container">
+        <div ng-view=""></div>
+      </div>
+    </main>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
+    <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
