--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/controllers/status.js"></script>
         <script src="scripts/controllers/registration.js"></script>
         <script src="scripts/controllers/meetings.js"></script>
+        <script src="scripts/controllers/checkins.js"></script>
         <!-- endbuild -->
 </body>
 </html>
