styled the nav bar
add bootstrap glyphicons font

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,7 @@
 
     <!-- Add your site or application content here -->
     <header>
-      <nav class="cf" ng-include="'views/nav.html'"></nav>
-      <div class="userdock" ng-include="'views/user-status.html'"></div>
+      <nav class="navbar navbar-default" ng-include="'views/nav.html'" ng-controller="StatusCtrl" role="navigation"></nav>
     </header>
 
     <main>
