make search notification a directive

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/controllers/registration.js"></script>
         <script src="scripts/controllers/meetings.js"></script>
         <script src="scripts/controllers/checkins.js"></script>
+        <script src="scripts/directives/search.js"></script>
         <!-- endbuild -->
 </body>
 </html>
