add user action confirmation directive

--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/controllers/meetings.js"></script>
         <script src="scripts/controllers/checkins.js"></script>
         <script src="scripts/directives/search.js"></script>
+        <script src="scripts/directives/confirm.js"></script>
         <!-- endbuild -->
 </body>
 </html>
